todo-app/manifests/deployment-meshed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-dep
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: todo
    spec:
      containers:
      - image: jacker92/todo-frontend:latest
        name: todo-frontend
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres
        - name: NATS_URL
          value: nats://my-nats:4222
        image: jacker92/todo-backend:latest
        livenessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 60
          periodSeconds: 5
        name: todo-backend
        readinessProbe:
          httpGet:
            path: /
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 500Mi
---
