todo-app/manifests/postgres-deployment-meshed.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres-svc
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: postgres
        image: postgres:13.1
        name: postgres
        ports:
        - containerPort: 5432
          name: web
        resources:
          limits:
            cpu: 250m
            memory: 200Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: data
          subPath: postgres
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
---
