todo-app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-update-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-update
   strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-rate
  template:
