todo-app/manifests/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  type: NodePort
  selector:
    app: postgres
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 5432
