todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  namespace: todo
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 2345
      name: todo-frontend
      protocol: TCP
      targetPort: 80
    - port: 2346
      name: todo-backend
      protocol: TCP
      targetPort: 3001
