todo-app/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dwk-material-ingress
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: todo-svc
          servicePort: 2345
      - path: /api/*
        backend:
          serviceName: todo-svc
          servicePort: 2346
